--- a/test/fixtures/organizations.yml
+++ b/test/fixtures/organizations.yml
@@ -1,3 +1,16 @@
+# == Schema Information
+# Schema version: 20110202040623
+#
+# Table name: organizations
+#
+#  id         :integer         not null, primary key
+#  name       :string(255)
+#  user       :integer
+#  type       :string(255)
+#  created_at :datetime
+#  updated_at :datetime
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
