--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,3 +1,19 @@
+# == Schema Information
+# Schema version: 20110208224139
+#
+# Table name: users
+#
+#  id                 :integer         not null, primary key
+#  first_name         :string(255)
+#  last_name          :string(255)
+#  email              :string(255)
+#  phone              :string(255)
+#  created_at         :datetime
+#  updated_at         :datetime
+#  encrypted_password :string(255)
+#  salt               :string(255)
+#
+
 # Read about fixtures at http://ar.rubyonrails.org/classes/Fixtures.html
 
 one:
